2005-02-01  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: launch the admin tool an
	arbtrary 5 seconds after starting the session.
	
	* lib/userprofile.py: allow the delegate not to
	emit any changes of its own.

2005-02-01  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: open the dummy X connection
	on the right display.

2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: open and hold open an X
	connection so Xnest doesn't re-init as xsetroot
	and xrdb connect and disconnect.

2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py:
	Explicitly write the protouser's xauth file since
	we need to change the display number.
	Use execve instead of changing os.environ.
	Add debugging spew.

2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/dirmonitor.py: disconnect from gamin when
	stopping the monitor.

2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/dirmonitor.py: remove all watches when
	stopping monitoring.

2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/dirmonitor.py: fixup some bugs, passes unit
	tests again.

2005-01-29  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.ac: Added pt_BR to ALL_LINGUAS.

2005-01-28  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: copy the xauth file for the user
	before starting the session.

2005-01-28  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: add code to write out an xauth
	file for Xnest.

Fri Jan 28 11:20:03 CET 2005 Daniel Veillard <veillard@redhat.com>

	* README lib/dirmonitor.py: switching to using gamin directly
	  for the directory watches.

2005-01-27  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: checkpoint of the session
	launching code.

2005-01-27  Mark McLoughlin  <mark@skynet.ie>

	* lib/util.py: hmm, use GeneralError again.

2005-01-26  Mark McLoughlin  <mark@skynet.ie>

	* lib/util.py: pull username and homedir from
	the passwd database if available.
