@@ -1,3 +1,10 @@
+2005-02-02  Mark McLoughlin  <mark@skynet.ie>
+
+	* lib/unittests.py: over-engineer the test harness
+	to make it easier to selectively run certain tests
+	i.e. "./unittests.py util storage filessource" just
+	runs those tests.
+
 2005-02-01  Mark McLoughlin  <mark@skynet.ie>
 
 	* lib/protosession.py: launch the admin tool an
